Clear knownToHaveNoOverflow() for line boxes when recomputing overflow without layout

knownToHaveNoOverflow() typically gets reset during layout. When we're just
recomputing overflow without a layout we have to clear it ourselves on any
lineboxes that we identify as needing overflow recalculated, otherwise computeOverflow()
on the linebox returns early.

BUG=609414

Review-Url: https://codereview.chromium.org/1980733002
Cr-Commit-Position: refs/heads/master@{#394186}

Former-commit-id: ed8035039a5d5a4424ae8f11d80d7b20ebb92537